--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Capstone</string>
     <string name="title_activity_home_page">HomePage</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_settings">Settings</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="prompt_email">Email</string>
@@ -26,4 +26,11 @@
     <string name="steps_text">
     Steps
     </string>
+    <string-array name="times">
+        <item>Last 7 Days</item>
+        <item>Last Month</item>
+        <item>Last Year</item>
+        <item>Last 2 Years</item>
+        <item>Last 5 Years</item>
+    </string-array>
 </resources>
